src/styles/mailerlite-overrides.css
/* ... */
#mlb2-32802782.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-embedSubmit button.loading {
  display: none;
}

#mlb2-32802782.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-embedSubmit {
  margin: 0;
  float: left;
  width: 100%;
}

/* Success message */
#mlb2-32802782.ml-form-embedContainer .ml-form-successBody {
  padding: 1.5rem !important;
}

#mlb2-32802782.ml-form-embedContainer .ml-form-successBody .ml-form-successContent {
  display: block !important;
  text-align: center !important;
}

#mlb2-32802782.ml-form-embedContainer .ml-form-successBody .ml-form-successContent h4 {
  color: hsl(var(--primary)) !important;
  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  font-size: 1.5rem !important;
  font-weight: 600 !important;
  margin: 0 0 1rem 0 !important;
}

#mlb2-32802782.ml-form-embedContainer .ml-form-successBody .ml-form-successContent p {
  color: hsl(var(--foreground) / 0.8) !important;
  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  font-size: 1rem !important;
  line-height: 1.5rem !important;
  margin: 0 !important;
}

/* reCAPTCHA styling */
.ml-form-recaptcha {
  margin-bottom: 1.25rem !important;
  margin-top: 1.25rem !important;
  display: block !important;
  clear: both !important;
  width: 100% !important;
}

.ml-form-recaptcha > div {
  display: inline-block;
}

.ml-form-recaptcha.ml-error iframe {
  border: solid 1px hsl(var(--destructive)) !important;
}

/* Error states */
.ml-error input, 
.ml-error textarea, 
.ml-error select {
  border-color: hsl(var(--destructive)) !important;
}

.ml-error .label-description,
.ml-error .label-description p,
.ml-error label:first-child {
  color: hsl(var(--destructive)) !important;
}

/* Checkbox styles */
#mlb2-32802782.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow input[type="checkbox"] {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  margin-top: 5px;
  margin-left: -1.5rem;
  overflow: visible;
}

#mlb2-32802782.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow .label-description {
  color: hsl(var(--foreground) / 0.8) !important;
  display: block;
  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  font-size: 0.75rem;
  text-align: left;
  margin-bottom: 0;
  position: relative;
  vertical-align: top;
}

#mlb2-32802782.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow label {
  font-weight: normal;
  margin: 0;
  padding: 0;
  position: relative;
  display: block;
  min-height: 24px;
  padding-left: 24px;
}

#mlb2-32802782.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow label a {
  color: hsl(var(--primary)) !important;
  text-decoration: underline;
}

/* Horizontal form layout */
.ml-form-formContent.horozintalForm .ml-form-horizontalRow { 
  height: auto; 
  width: 100%; 
  float: left; 
}

.ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal { 
  width: 70%; 
  float: left; 
}

.ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-button-horizontal { 
  width: 30%; 
  float: left; 
  padding-left: 10px;
}

.ml-form-formContent.horozintalForm .ml-form-horizontalRow .horizontal-fields { 
  box-sizing: border-box; 
  float: left; 
  padding-right: 10px;
  width: 100%;
}

/* Mobile button */
.ml-mobileButton-horizontal { 
  display: none; 
}

/* Responsive styles */
@media only screen and (max-width: 768px) {
  .ml-form-embedWrapper.embedDefault, 
  .ml-form-embedWrapper.embedPopup { 
    width: 100%!important; 
  }
  
  .ml-form-formContent.horozintalForm { 
    float: left!important; 
  }
  
  .ml-form-formContent.horozintalForm .ml-form-horizontalRow { 
    height: auto!important; 
    width: 100%!important; 
    float: left!important; 
  }
  
  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal { 
    width: 100%!important; 
  }
  
  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal > div { 
    padding-right: 0px!important; 
    padding-bottom: 1rem; 
  }
  
  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-button-horizontal { 
    width: 100%!important; 
    padding-left: 0 !important;
  }
  
  .ml-hide-horizontal { 
    display: none !important; 
  }
  
  .ml-form-formContent.horozintalForm .ml-button-horizontal { 
    display: none!important; 
  }
  
  .ml-mobileButton-horizontal { 
    display: inline-block !important; 
    margin-bottom: 1.25rem;
    width: 100%; 
  }
  
  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal > div { 
    padding-bottom: 0px !important; 
  }
  
  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .horizontal-fields {
    margin-bottom: 1rem !important;
    width: 100% !important;
  }
}

@media only screen and (max-width: 480px) {
  .ml-form-recaptcha {
    width: 220px!important
  }
  
  .g-recaptcha {
    transform: scale(0.78);
    -webkit-transform: scale(0.78);
    transform-origin: 0 0;
    -webkit-transform-origin: 0 0;
  }
}

